# revolve-brain

./: .gitignore  CMakeLists.txt  neat.diff  revolve-brain.kdev4  setup.py
cpp/: .gitignore  CMakeLists.txt  real-robot-example.py
cpp/brain/: Brain.h  CPGBrain.cpp  CPGBrain.h  Conversion.cpp  Conversion.h  ConverterSplitBrain.h  ConvertingSplitBrain.h  Evaluator.h  FakeLightSensor.cpp  FakeLightSensor.h  GenericLearnerBrain.cpp  GenericLearnerBrain.h  NeuralNetwork.cpp  NeuralNetwork.h  RLPower.cpp  RLPower.h  SUPGBrain.cpp  SUPGBrain.h  SUPGBrainPhototaxis.cpp  SUPGBrainPhototaxis.h  Sensor.h  SimpleSplitBrain.h  SplitBrain.h  Types.h  actuator.h  basic_neat_brain.cpp  basic_neat_brain.h  brain.h  conversion.cpp  conversion.h  converting_split_brain.h  evaluator.h  fakelightsensor.cpp  fakelightsensor.h  neural_network.cpp  neural_network.h  neuralnetwork.cpp  phototaxisevaluator.cpp  phototaxisevaluator.h  rlpower.cpp  (+8 more)
cpp/brain/ccpg/: .ExtendedNeuralNetwork.h.kate-swp  BiasNeuron.cpp  BiasNeuron.h  DifferentialCPG.cpp  DifferentialCPG.h  ExtendedNeuralNetwork.cpp  ExtendedNeuralNetwork.h  InputNeuron.cpp  InputNeuron.h  LeakyIntegrator.cpp  LeakyIntegrator.h  LinearNeuron.cpp  LinearNeuron.h  NeuralConnection.cpp  NeuralConnection.h  Neuron.cpp  Neuron.h  OscillatorNeuron.cpp  OscillatorNeuron.h  SigmoidNeuron.cpp  SigmoidNeuron.h  VOscillator.cpp  VOscillator.h  XOscillator.cpp  XOscillator.h  differential_cpg.cpp  differential_cpg.h  extended_neural_network.cpp  extended_neural_network.h  leaky_integreator.cpp  linear_neuron.cpp  linear_neuron.h  neuron.cpp  neuron.h  oscillator_neuron.cpp  oscillator_neuron.h  sigmoid_neuron.h  v_oscillator.cpp  v_oscillator.h  x_oscillator.cpp  (+1 more)
cpp/brain/controller/: AccNEATCPPNController.cpp  AccNEATCPPNController.h  BaseController.h  CMakeLists.txt  CPGController.cpp  CPGController.h  Controller.h  ExtCPPN.cpp  ExtCPPN.h  ExtCPPNWeights.cpp  ExtCPPNWeights.h  ExtendedANN.cpp  ExtendedANN.h  ExtendedANNWeights.cpp  ExtendedANNWeights.h  LayeredExtCPPN.cpp  LayeredExtCPPN.h  LayeredExtendedANN.cpp  LayeredExtendedANN.h  PolicyController.cpp  PolicyController.h  RafCPGController.cpp  RafCPGController.h  SplineController.cpp  SplineController.h  base_controller.h  controller.h  ext_nn_net.cpp  ext_nn_net.h  ext_nn_weights.cpp  ext_nn_weights.h  layered_ext_nn_net.cpp  layered_ext_nn_net.h  policy_controller.cpp  policy_controller.h  spline_controller.cpp  spline_controller.h
cpp/brain/controller/extnn/: BiasNeuron.cpp  BiasNeuron.h  CMakeLists.txt  DifferentialCPG.cpp  DifferentialCPG.h  ENeuron.cpp  ENeuron.h  InputDependentOscillatorNeuron.cpp  InputDependentOscillatorNeuron.h  InputNeuron.cpp  InputNeuron.h  LeakyIntegrator.cpp  LeakyIntegrator.h  LinearNeuron.cpp  LinearNeuron.h  NeuralConnection.cpp  NeuralConnection.h  Neuron.h  OscillatorNeuron.cpp  (+33 more)
cpp/brain/cpg/: CMakeLists.txt  CPGNetwork.cpp  CPGNetwork.h  CPGNeuron.h  CPGTypes.h  MotoNeuron.cpp  MotoNeuron.h  PatternFormationNeuron.cpp  PatternFormationNeuron.h  RythmGenerationNeuron.cpp  RythmGenerationNeuron.h
cpp/brain/cppneat/: CMakeLists.txt  connection_gene.h  crossover.cpp  crossover.h  gene.h  genetic_encoding.cpp  genetic_encoding.h  mutator.cpp  mutatur.h  neat_learner.cpp  neat_learner.h  neuron.h  types.h
cpp/brain/extnn/: CMakeLists.txt  bias_neuron.cpp  bias_neuron.h  differential_cpg.cpp  extended_neural_network.cpp  extended_neural_network.h  input_neuron.cpp  input_neuron.h  leaky_integrator.cpp  leaky_integrator.h  linear_neuron.cpp  neuron.cpp  neuron.h  oscillator_neuron.h  sigmoid_neuron.cpp  v_oscillator.cpp  x_oscillator.h
cpp/brain/innovgenome/: innovgenome.h
cpp/brain/learner/: AccNEATLearner.cpp  AccNEATLearner.h  BaseLearner.cpp  BaseLearner.h  CMakeLists.txt  HyperAccNEATLearner_CPGController.cpp  HyperAccNEATLearner_CPGController.h  Learner.h  NEATLearner.cpp  NEATLearner.h  PhototaxisLearner.cpp  PhototaxisLearner.h  RLPowerLearner.cpp  RLPowerLearner.h  base_learner.cpp  base_learner.h  learner.h  neat_learner.cpp  neat_learner.h  rlpower_learner.cpp  rlpower_learner.h
cpp/brain/python/: ActuatorWrap.h  Brain.cpp  CMakeLists.txt  CPGBrain_python.cpp  CPGBrain_python.h  EvaluatorWrap.h  PythonArray.h  PythonListWrap.h  RLPower_python.h  SUGPBrain_python.cpp  SUGPBrain_python.h  SUPGBrain_python.cpp  SUPGBrain_python.h  SensorWrap.h  actuator_test.py  actuator_wrap.h  brain.cpp  evaluator_wrap.h  import_test.py  neuralnetwork_test.py  python_list_wrap.h  rlpower_python.cpp  rlpower_python.h  rlpower_test.py  sensor_test.py  sensor_wrap.h  supgbrain_python.cpp  supgbrain_python.h
cpp/brain/split_cpg/: CMakeLists.txt  controller.h  conversion.cpp  conversion.h  converting_split_brain.h  differential_cpg.cpp  ext_nn.cpp  ext_nn.h  extended_neural_network.cpp  extended_neural_network.h  extended_neural_network_controller.cpp  extended_neural_network_controller.h  input_neuron.cpp  leaky_integrator.h  learner.h  sigmoid_neuron.cpp  simple_split_brain.cpp  simple_split_brain.h  spline_controller.h  split_brain.h  weight_vector_learner.cpp  weight_vector_learner.h
cpp/brain/supg/: SUPGGenomeManager.cpp  SUPGGenomeManager.h  SUPGNeuron.cpp  supggenomemanager.cpp  supggenomemanager.h  supgneuron.cpp  supgneuron.h
cpp/neat/: AsyncNEAT.cpp  AsyncNEAT.h  NEATEvaluation.cpp  NEATEvaluation.h  asyncneat.cpp  asyncneat.h  neatevaluation.cpp  neatevaluation.h
cpp/neat/accneat/: CMakeLists.txt
cpp/neat/test/: test_AsyncNEAT.cpp  test_AsyncNEAT.h  test_CustomGenomeManager.cpp  test_CustomGenomeManager.h  test_MultiANNSpeciesNEAT.cpp  test_MultiANNSpeciesNEAT.h  testasyncneat.cpp  testcustomgenomemanager.cpp  testcustomgenomemanager.h  testmultinnspeciesneat.cpp
cpp/test/: test_Actuator.cpp  test_Actuator.h  test_CPGBrain.cpp  test_CPGBrain.h  test_Evaluator.cpp  test_Evaluator.h  test_SUPGBrain.cpp  test_SUPGBrain.h  test_Sensor.cpp  test_Sensor.h  testactuator.cpp  testactuator.h  testcpgbrain.cpp  testevaluator.cpp  testevaluator.h  testneatbrain.cpp  testneatbrain.h  testsensor.cpp  testsensor.h  testsupgbrain.cpp  testsupgbrain.h
(+118 files in other folders)
