
add_library(extnn STATIC
	    extended_neural_network.cpp
	    neuron.cpp
	    differential_cpg.cpp
	    bias_neuron.cpp
	    input_neuron.cpp
	    leaky_integreator.cpp
	    linear_neuron.cpp
	    neural_connection.cpp
	    oscillator_neuron.cpp
	    sigmoid_neuron.cpp
	    v_oscillator.cpp
	    x_oscillator.cpp
)
