
add_library(extnn STATIC
            Neuron.cpp
            DifferentialCPG.cpp
            BiasNeuron.cpp
            InputNeuron.cpp
            LeakyIntegrator.cpp
            LinearNeuron.cpp
            NeuralConnection.cpp
            OscillatorNeuron.cpp
            SigmoidNeuron.cpp
            VOscillator.cpp
            XOscillator.cpp
            InputDependentOscillatorNeuron.cpp
            )
